fix: transition miniplayer offscreen return

--- a/src/css/controls/_timeline.css
+++ b/src/css/controls/_timeline.css
@@ -5,11 +5,11 @@
   z-index: 3;
   touch-action: none;
   cursor: pointer;
-  contain: layout;
+  container-type: size;
 }
 .tmg-video-container:is(:not(.tmg-video-overlay, :has(:focus-visible, .tmg-video-playback-rate-notifier.tmg-video-control-active)).tmg-video-progress-bar, [data-size-tier^="xxxxx"]) :is(.tmg-video-timeline-container, .tmg-video-seek-bars-wrapper) {
   position: absolute;
-  bottom: 0;
+  bottom: 0.1px;
   width: 100%;
   margin-inline: 0;
   border-radius: 0;
@@ -39,8 +39,10 @@
 .tmg-video-seek-bars-wrapper,
 .tmg-video-timeline .tmg-video-seek-bar {
   position: absolute;
-  height: 100%;
   left: 0;
+  width: 100%;
+  height: 100%;
+  transform-origin: left;
 }
 .tmg-video-container:not(.tmg-video-scrubbing, .tmg-video-previewing) .tmg-video-seek-bar {
   transition: opacity var(--tmg-video-fade-transition-time) ease-in-out;
@@ -50,14 +52,14 @@
   background: var(--tmg-video-base-seek-bar-background);
 }
 .tmg-video-buffered-seek-bar {
-  right: calc(100% - var(--tmg-video-current-buffered-position) * 100%);
+  transform: scaleX(calc(var(--tmg-video-current-buffered-position) * 100%));
   background: var(--tmg-video-buffered-seek-bar-background);
 }
 .tmg-video-container:not(.tmg-video-overlay, :has(:focus-visible, .tmg-video-playback-rate-notifier.tmg-video-control-active)).tmg-video-progress-bar .tmg-video-buffered-seek-bar {
   display: none;
 }
 .tmg-video-preview-seek-bar {
-  right: calc(100% - var(--tmg-video-current-preview-position) * 100%);
+  transform: scaleX(calc(var(--tmg-video-current-preview-position) * 100%));
   background: var(--tmg-video-preview-seek-bar-background);
   opacity: 0;
 }
@@ -68,7 +70,7 @@
   opacity: 1;
 }
 .tmg-video-played-seek-bar {
-  right: calc(100% - var(--tmg-video-current-played-position) * 100%);
+  transform: scaleX(calc(var(--tmg-video-current-played-position) * 100%));
   background: var(--tmg-video-played-seek-bar-background);
 }
 .tmg-video-container:not(.tmg-video-overlay, :has(:focus-visible, .tmg-video-playback-rate-notifier.tmg-video-control-active)).tmg-video-progress-bar .tmg-video-played-seek-bar {
@@ -77,8 +79,7 @@
 .tmg-video-thumb-indicator {
   position: absolute;
   top: 50%;
-  left: calc(var(--tmg-video-current-thumb-position) * 100%);
-  translate: -50% -50%;
+  translate: calc(-50% + ((var(--tmg-video-current-thumb-position) * 100cqi))) -50%;
   width: var(--tmg-video-range-thumb-size);
   height: var(--tmg-video-range-thumb-size);
   background: var(--tmg-video-seek-thumb-background);
@@ -94,9 +95,8 @@
 .tmg-video-preview-container {
   position: absolute;
   top: calc(var(--tmg-video-current-unit) / -1.5);
-  left: calc(var(--tmg-video-current-preview-img-position) * 100%);
   display: flex;
-  translate: -50% -100%;
+  translate: calc(-50% + (var(--tmg-video-current-preview-img-position) * 100cqi)) -100%;
   border: calc(var(--tmg-video-current-unit) / 12.5) solid var(--tmg-video-preview-border-color);
   border-radius: calc(var(--tmg-video-current-unit) / 2.5);
   background: var(--tmg-video-background);
